Fix compilation warnings in WebCore and JavaScriptCore

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: javafx
    • None
    • web

        While compiling in windows, observed two warnings in webkit which should be fixed:

        1.
        \rt\modules\web\src\main\native\source\javascriptcore\runtime\regexpprototype.cpp(148): warning C4700: uninitialized local variable 'string' used

        The fix will be taken from the changeset https://trac.webkit.org/changeset/200338

        This changeset contains many warning fixes. But i will be taking now the fix only for file RegExpPrototype.cpp (https://trac.webkit.org/changeset/200338/trunk/Source/JavaScriptCore/runtime/RegExpPrototype.cpp). When i encounter more warnings, i can take more fixes if required.

        2. \rt\modules\web\src\main\native\Source\WebCore\platform\java\api\BackForwardListJava.cpp(72): warning C4190: 'createEntry' has C-linkage specified, but returns UDT 'JLocalRef<jobject>' which is incompatible with C [\rt\modules\web\build\win\Release\Source\WebCore\WebCore.vcxproj]

              Assignee:
              Murali Billa
              Reporter:
              Murali Billa
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: