8161699: Fix compilation warnings in WebCore and JavaScriptCore

Reviewed-by: kcr, arajkumar