modules/web/src/main/native/Source/JavaScriptCore/runtime/RegExpPrototype.cpp
@@ -142,6 +142,7 @@ typedef std::array<char, 3 + 1> FlagsString; // 3 different flags and a null cha
 static inline FlagsString flagsString(ExecState* exec, JSObject* regexp)
 {
     FlagsString string;
+    string[0] = 0;
 
     JSValue globalValue = regexp->get(exec, exec->propertyNames().global);
     if (exec->hadException())
